# dotfiles

./: .Xmodmap  .ackrc  .ghci  .gitconfig  .gitignore  .gitmodules  .ideavimrc  .path  .tmux.conf  .vimrc  .xbindkeysrc  .xinitrc  .zshrc  README.md  custom.xkb  setup
.IntelliJIdea15/config/colors/: Darcula big.icls  Darcula med.icls  Default Pro.icls  Default big.icls  Default med.icls  Solarized Light (Alternate).icls  Solarized Light Pro.icls
.IntelliJIdea2016.3/: .gitignore
.IntelliJIdea2016.3/config/codestyles/: Default _1_.xml
.IntelliJIdea2017.1/config/: .gitignore
.config/terminator/: config
.iterm/: com.googlecode.iterm2.plist
.kwm/: kwmrc
.vim/spell/: en.utf-8.add  en.utf-8.add.spl
.xmonad/: stalonetrayrc  xmobarrc  xmonad.hs
linux/: .XCompose  .Xresources  .path  .xbindkeysrc  .xinitrc  custom.xkb  redshift.conf
linux/.IntelliJIdea2017.1/: .gitignore
linux/.IntelliJIdea2017.2/: idea64.vmoptions
linux/.xmonad/: .gitignore  Makefile  build  cabal.project  cabal.project.freeze  make-xmonad.sh  my-xmonad-config.cabal  stalonetrayrc  stalonetrayrc.dark  stalonetrayrc.light  xmobarrc  xmobarrc.dark  xmobarrc.light  xmonad.hs
linux/resources/: set-wallpaper  wallpaper
mac/: .chunkwmrc  .khdrc  .path  .skhdrc
mac/.iterm/: com.googlecode.iterm2.plist
mac/resources/: .gitignore  Material.terminal  MaterialDark.terminal
notes/: vim-cheatsheet.md
shared/: .ackrc  .ghci  .gitconfig  .gitignore  .ideavimrc  .psqlrc  .style  .tmux.conf  .vimrc  .zshrc  common.vimrc
shared/.fonts/: .uuid
shared/.ipython/: custom_prompt.py
(+61 files in other folders)
