cabal-version: 1.12

name:           my-xmonad-config
version:        0.0.0.0
license:        AllRightsReserved
build-type:     Simple

executable xmonad-x86_64-linux
  main-is: xmonad.hs
  hs-source-dirs: .
  ghc-options: -dynamic -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , xmonad-dbus
    , xmonad
    , xmonad-contrib
  default-language: Haskell2010
